Fixing a bunch of spacing issues, rewording some things

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,7 @@
+
+body {
+    background-color: #21242a;
+}
 pre.language-python {
     margin-bottom: 26px;
 }
@@ -10,3 +14,4 @@ a, a:visited {
 h2 > code {
     font-size: inherit;
 }
+
